--- a/index.html
+++ b/index.html
@@ -1,12 +1,262 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <head>
-    <title>CelebBattles</title>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>Team - Moderna Bootstrap Template</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Roboto:300,300i,400,400i,500,500i,700,700i&display=swap" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: Moderna - v4.3.0
+  * Template URL: https://bootstrapmade.com/free-bootstrap-template-corporate-moderna/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
+
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function() {
+          console.log("Execute 1")
+
+          $.get('/rankings.txt', function(result) {
+              console.log(result)
+          });
+
+          console.log("Execute 2")
+        }); 
+    </script>
 </head>
 
 <body>
-    <h1>Welcome to CelebBattles</h1>
-    <h2>Tournaments</h2>
 
-    <ul>
-        <li><a href="https://celebbattles.github.io/tournaments/bestface">Best Face</a></li>
-    </ul>
+  <!-- ======= Header ======= -->
+  <header id="header" class="fixed-top d-flex align-items-center ">
+    <div class="container d-flex justify-content-between align-items-center">
+
+      <div class="logo">
+        <h1 class="text-light"><a href="index.html"><span>CelebBattles  </span></a></h1>
+        <!-- Uncomment below if you prefer to use an image logo -->
+        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      </div>
+
+      <nav id="navbar" class="navbar">
+        <ul>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="services.html">Services</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="team.html">Team</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+            <ul>
+              <li><a href="#">Drop Down 1</a></li>
+              <li><a href="#">Drop Down 2</a></li>
+              <li><a href="#">Drop Down 3</a></li>
+              <li><a href="#">Drop Down 4</a></li>
+            </ul>
+          </li>
+          <li><a href="contact.html">Contact Us</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+
+    </div>
+  </header><!-- End Header -->
+
+  <main id="main">
+
+    <!-- ======= Our Team Section ======= -->
+    <section class="breadcrumbs">
+      <div class="container">
+
+        <div class="d-flex justify-content-between align-items-center">
+          <h2>Top 30 Celebs</h2>
+          <ol>
+            <li><a href="index.html">Home</a></li>
+          </ol>
+        </div>
+
+      </div>
+    </section><!-- End Our Team Section -->
+
+    <!-- ======= Team Section ======= -->
+    <section class="team">
+      <div class="container">
+
+        <div class="row">
+            <div class="col">
+                <div class="member">
+                    <div class="member-img">
+                    <img src="assets/img/team/alexandra-daddario.jpg" class="img-fluid" alt="image missing">
+                    </div>
+                    <div class="member-info">
+                    <h4>Alexandra Daddario</h4>
+                    <span>Rank 1, ELO 2629</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="member">
+                    <div class="member-img">
+                    <img src="assets/img/team/victoria-justice.jpg" class="img-fluid" alt="">
+                    </div>
+                    <div class="member-info">
+                    <h4>Victoria Justice</h4>
+                    <span>Rank 2, ELO 2625</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="member">
+                    <div class="member-img">
+                    <img src="assets/img/team/emma-watson.jpg" class="img-fluid" alt="">
+                    </div>
+                    <div class="member-info">
+                    <h4>Emma Watson</h4>
+                    <span>Rank 3, ELO 2610</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="member">
+                    <div class="member-img">
+                    <img src="assets/img/team/elizabeth-olsen.jpg" class="img-fluid" alt="">
+                    </div>
+                    <div class="member-info">
+                    <h4>Elizabeth Olsen</h4>
+                    <span>Rank 4, ELO 2608</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="member">
+                    <div class="member-img">
+                    <img src="assets/img/team/ana-de-armas.jpg" class="img-fluid" alt="">
+                    </div>
+                    <div class="member-info">
+                    <h4>Ana De Armas</h4>
+                    <span>Rank 5, ELO 2597</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <div class="member">
+                    <div class="member-img">
+                    <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                    </div>
+                    <div class="member-info">
+                    <h4>Alexandra Daddario</h4>
+                    <span>Rank 1, ELO 2625</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="member">
+                    <div class="member-img">
+                    <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                    </div>
+                    <div class="member-info">
+                    <h4>Alexandra Daddario</h4>
+                    <span>Rank 1, ELO 2625</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="member">
+                    <div class="member-img">
+                    <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                    </div>
+                    <div class="member-info">
+                    <h4>Alexandra Daddario</h4>
+                    <span>Rank 1, ELO 2625</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="member">
+                    <div class="member-img">
+                    <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                    </div>
+                    <div class="member-info">
+                    <h4>Alexandra Daddario</h4>
+                    <span>Rank 1, ELO 2625</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <div class="member">
+                    <div class="member-img">
+                    <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
+                    </div>
+                    <div class="member-info">
+                    <h4>Alexandra Daddario</h4>
+                    <span>Rank 1, ELO 2625</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+      </div>
+    </section><!-- End Team Section -->
+
+  </main><!-- End #main -->
+
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright <strong><span>Moderna</span></strong>. All Rights Reserved
+      </div>
+      <div class="credits">
+        <!-- All the links in the footer should remain intact. -->
+        <!-- You can delete the links only if you purchased the pro version. -->
+        <!-- Licensing information: https://bootstrapmade.com/license/ -->
+        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-bootstrap-template-corporate-moderna/ -->
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div>
+    </div>
+  </footer><!-- End Footer -->
+
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <!-- <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+  <script src="assets/vendor/purecounter/purecounter.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script> -->
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+
 </body>
+
+</html>
