--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
          <section class="team">
             <div class="container">
                <div class="row">
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r1" class="img-fluid" alt="image missing">
@@ -105,7 +105,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r2" class="img-fluid" alt="image missing">
@@ -116,7 +116,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r3" class="img-fluid" alt="image missing">
@@ -127,7 +127,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r4" class="img-fluid" alt="image missing">
@@ -138,7 +138,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r5" class="img-fluid" alt="image missing">
@@ -149,9 +149,7 @@
                         </div>
                      </div>
                   </div>
-               </div>
-               <div class="row">
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r6" class="img-fluid" alt="image missing">
@@ -162,7 +160,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r7" class="img-fluid" alt="image missing">
@@ -173,7 +171,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r8" class="img-fluid" alt="image missing">
@@ -184,7 +182,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r9" class="img-fluid" alt="image missing">
@@ -195,7 +193,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r10" class="img-fluid" alt="image missing">
@@ -206,9 +204,7 @@
                         </div>
                      </div>
                   </div>
-               </div>
-               <div class="row">
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r11" class="img-fluid" alt="image missing">
@@ -219,7 +215,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r12" class="img-fluid" alt="image missing">
@@ -230,7 +226,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r13" class="img-fluid" alt="image missing">
@@ -241,7 +237,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r14" class="img-fluid" alt="image missing">
@@ -252,7 +248,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r15" class="img-fluid" alt="image missing">
@@ -263,9 +259,7 @@
                         </div>
                      </div>
                   </div>
-               </div>
-               <div class="row">
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r16" class="img-fluid" alt="image missing">
@@ -276,7 +270,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r17" class="img-fluid" alt="image missing">
@@ -287,7 +281,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r18" class="img-fluid" alt="image missing">
@@ -298,7 +292,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r19" class="img-fluid" alt="image missing">
@@ -309,7 +303,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r20" class="img-fluid" alt="image missing">
@@ -320,9 +314,7 @@
                         </div>
                      </div>
                   </div>
-               </div>
-               <div class="row">
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r21" class="img-fluid" alt="image missing">
@@ -333,7 +325,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r22" class="img-fluid" alt="image missing">
@@ -344,7 +336,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r23" class="img-fluid" alt="image missing">
@@ -355,7 +347,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r24" class="img-fluid" alt="image missing">
@@ -366,7 +358,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r25" class="img-fluid" alt="image missing">
@@ -377,9 +369,7 @@
                         </div>
                      </div>
                   </div>
-               </div>
-               <div class="row">
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r26" class="img-fluid" alt="image missing">
@@ -390,7 +380,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r27" class="img-fluid" alt="image missing">
@@ -401,7 +391,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r28" class="img-fluid" alt="image missing">
@@ -412,7 +402,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r29" class="img-fluid" alt="image missing">
@@ -423,7 +413,7 @@
                         </div>
                      </div>
                   </div>
-                  <div class="col">
+                  <div  class="col-lg-3 col-md-5 d-flex align-items-stretch">
                      <div class="member">
                         <div class="member-img">
                            <img id="img-r30" class="img-fluid" alt="image missing">
