--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
       <script type="text/javascript">
          $(document).ready(function() {
-           $.get('http://127.0.0.1:5000/', function(result) {
+           $.get('rankings.txt', function(result) {
                var lines = result.split("\n")
                
                for (var i = 1; i <= lines.length; i++) {
